--- a/anagata-website/src/assets/styles/global.css
+++ b/anagata-website/src/assets/styles/global.css
@@ -1,3 +1,207 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.motion-modal {
+  @apply motion-scale-in-[0.5] motion-translate-x-in-[-25%] motion-translate-y-in-[25%] motion-opacity-in-[0%] motion-rotate-in-[-10deg] motion-blur-in-[5px] motion-duration-[0.35s] motion-duration-[0.53s]/scale motion-duration-[0.53s]/translate motion-duration-[0.63s]/rotate;
+}
+
+.motion-popup {
+  @apply motion-scale-in-[0] motion-opacity-in-[0%] motion-duration-[0.77s]/scale;
+}
+
+.button-blue {
+  @apply bg-ang-prm-blue h-10 font-sans flex items-center justify-center capitalize font-normal text-[14px];
+}
+
+.button-red {
+  @apply bg-ang-prm-red h-10 font-sans flex items-center justify-center capitalize font-normal text-[14px];
+}
+
+.button-outline-white {
+  @apply border-white border-[1px] bg-ang-prm-blue h-10 font-sans flex items-center justify-center capitalize font-normal text-[14px] gap-x-2 hover:bg-white hover:text-ang-prm-blue;
+}
+
+.button-outline-white-2 {
+  @apply border-white border-[1px] bg-ang-prm-blue h-10 font-sans flex items-center justify-center capitalize font-normal gap-x-2 hover:bg-white hover:text-ang-prm-blue;
+}
+
+.button-outline-white-black {
+  @apply border-white border-[1px] bg-transparent h-10 font-sans flex items-center justify-center capitalize font-normal text-[14px] gap-x-2 hover:bg-ang-prm-red hover:text-white hover:border-ang-prm-red;
+}
+
+.button-outline-white-black-2 {
+  @apply border-white border-[1px] bg-transparent h-14 font-sans flex items-center justify-center capitalize font-normal gap-x-2 hover:bg-ang-prm-red hover:text-white hover:border-ang-prm-red;
+}
+
+.button-outline-red {
+  @apply border-ang-prm-red border-[1px] text-ang-prm-red bg-transparent h-10 font-sans flex items-center justify-center capitalize font-normal text-[14px] gap-x-2 hover:bg-ang-prm-red hover:text-white;
+}
+
+.button-outline-red-2 {
+  @apply border-ang-prm-red border-[1px] text-ang-prm-red bg-transparent h-12 font-sans flex items-center justify-center capitalize font-normal text-[20px] gap-x-2 hover:bg-ang-prm-red hover:text-white;
+}
+
+.button-outline-transparant {
+  @apply border-white border-[1px] bg-transparent h-10 font-sans flex items-center justify-center capitalize font-normal text-[14px] gap-x-2 hover:bg-white hover:text-ang-prm-black;
+}
+
+.header-hover {
+  @apply text-[16px] hover:underline transition-all cursor-pointer hover:text-ang-prm-blue;
+}
+
+.font-subtitle {
+  @apply text-white text-[24px] font-sans font-normal;
+}
+
+.font-subtitle-black {
+  @apply text-ang-prm-black text-[24px] font-sans font-normal;
+}
+
+.custom-hover-effect {
+  position: relative;
+  display: inline-block;
+  color: #333;
+  cursor: pointer;
+}
+
+.truncate-twoline {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.truncate-threeline {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.truncate-oneline {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.truncate-sixline {
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.truncate-fiveline {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.truncate-sixline {
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.custom-hover-effect {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+}
+
+.custom-hover-effect:hover {
+  color: #253d8a; /* Change text color on hover */
+}
+
+.custom-hover-effect::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #253d8a;
+  transform: scaleX(0); /* Start invisible */
+  transform-origin: left; /* Start from left */
+  transition: transform 0.2s ease-out;
+}
+
+.custom-hover-effect:hover::after {
+  transform: scaleX(1); /* Grow to full width */
+  transform-origin: left; /* Expand from the left */
+}
+
+.custom-hover-effect:not(:hover)::after {
+  transform: scaleX(0); /* Shrink to invisible */
+  transform-origin: right; /* Shrink to the right */
+}
+
+.hover-menumobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+  color: white;
+}
+
+.hover-menumobile:hover {
+  color: #ffffff; /* Change text color on hover */
+}
+
+.hover-menumobile::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0px;
+  height: 2px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  transform: scaleX(0); /* Start invisible */
+  transform-origin: left; /* Start from left */
+  transition: transform 0.2s ease-out;
+}
+
+.hover-menumobile:hover::after {
+  transform: scaleX(1); /* Grow to full width */
+  transform-origin: left; /* Expand from the left */
+}
+
+.hover-menumobile:not(:hover)::after {
+  transform: scaleX(0); /* Shrink to invisible */
+  transform-origin: right; /* Shrink to the right */
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.overflow-x-clip-anagata {
+  overflow-x: clip;
+}
+
+.practices-border {
+  @apply flex justify-center px-5 py-2 border-ang-prm-text  border-[1px] rounded-3xl font-light text-[18px];
+}
+/* 
+.practices-border {
+  @apply flex justify-center px-5 py-2 border-ang-prm-text hover:border-ang-prm-red border-[1px] rounded-3xl font-light text-[18px] hover:bg-ang-prm-red hover:text-white cursor-pointer transition-all;
+} */
